🔄 Add automatic token refresh system
- TokenManager service with MongoDB persistence
- Auto-refresh tokens every 90 minutes
- Graceful shutdown handling
- Production-ready for Render deployment
- Set and forget token management

--- a/render.yaml
+++ b/render.yaml
@@ -11,6 +11,8 @@ services:
         value: production
       - key: PORT
         value: 10000
+      - key: MONGODB_URI
+        sync: false
       - key: SMARTCAR_CLIENT_ID
         sync: false
       - key: SMARTCAR_CLIENT_SECRET
