--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
   },
   "dependencies": {
     "@slack/web-api": "^7.11.0",
+    "@types/compression": "^1.8.1",
     "@types/cookie-parser": "^1.4.9",
+    "@types/cors": "^2.8.19",
     "@types/cron": "^2.0.1",
     "@types/express": "^5.0.3",
     "@types/express-session": "^1.18.2",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/moment-timezone": "^0.5.13",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.3.0",
     "@types/node-fetch": "^2.6.13",
     "@types/passport": "^1.0.17",
@@ -36,6 +39,7 @@
     "express": "^4.17.1",
     "express-rate-limit": "^8.1.0",
     "express-session": "^1.18.2",
+    "googleapis": "^144.0.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "moment-timezone": "^0.6.0",
@@ -50,17 +54,14 @@
     "pino": "^9.12.0",
     "pino-http": "^10.5.0",
     "puppeteer": "^24.23.0",
+    "typescript": "^4.1.2",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@types/compression": "^1.8.1",
-    "@types/cors": "^2.8.19",
-    "@types/multer": "^2.0.0",
     "ts-node": "^9.1.1",
-    "ts-node-dev": "^1.0.0",
-    "typescript": "^4.1.2"
+    "ts-node-dev": "^1.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
