Fix duplicate Slack PDF reports with distributed lock
Problem: When Render scaled to multiple instances, both instances would
send the daily Slack report at 7pm, resulting in duplicate PDFs.

Solution:
- Added MongoDB-based distributed lock before sending reports
- First instance to acquire lock sends report, others skip
- Lock expires after 1 minute (auto-cleanup via TTL index)
- Lock is released after successful send
- Uses string-based _id for lock key (date-based)

This ensures only ONE instance sends the daily Slack report, even when
multiple instances are running for redundancy/load balancing.

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,5 @@ mongodb-macos-*/
 
 # Generated documentation (keep in repo, but exclude from builds)
 # PRODUCTION_CLEANUP_REPORT.md is for reference
+vercel-test/
+mongodb-macos-*.tgz
